Fixed ModelIdentifier not recognizing pattern variants
Signed-off-by: Sigmund Granaas <sigmundsgranaas@gmail.com>